--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,10 +1,10 @@
 h1 {
     position: relative;
     height: 100vh;
-    width: calc(100% - 88px);
+    width: 100vw;
     background: var(--body-color);
     padding: 20px;
-    transition: .5s;
+    transition: var(--tran-05);
 }
 
 .open {
