--- a/src/components/layout/Sidebar.css
+++ b/src/components/layout/Sidebar.css
@@ -2,8 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: var(--open);
+    height: 100vh;
     padding: 10px 14px;
     background: var(--sidebar-color);
     transition: var(--tran-05);
@@ -18,6 +17,9 @@
     opacity: 0;
 }
 
+.close .search-box {
+    display: none;
+}
 
 .sidebar .image-text img {
     width: 40px;
@@ -183,4 +185,72 @@
     transform: translateY(-50%);
     cursor: pointer;
     transition: var(--tran-03);
+}
+
+/* Media Query  */
+
+/* PHONE */
+@media only screen and (max-width: 600px){
+    .sidebar {
+        width: 15%;
+    }
+
+    .sidebar .close {
+        width: var(--closed);
+    }
+
+    .sidebar .text {
+        opacity: 0;
+    }
+
+    .sidebar .arrow {
+        opacity: 0;
+    }
+
+    .search-box {
+        display: none;
+    }
+}
+
+/* TABLET */
+@media only screen and (min-width: 600px){
+    
+    .sidebar {
+        width: var(--open);
+    }
+
+    .close{
+        width: 12%;
+    }
+
+    .sidebar .text {
+        font-size: .8rem;
+    }
+    
+    .sidebar .header-text {
+        opacity: 0;
+    }
+}
+
+/* DESKTOP AND MORE */
+@media only screen and (min-width: 992px) {
+    .sidebar {
+        width: var(--open);
+    }
+
+    .sidebar .text {
+        font-size: 1.5rem;
+    }
+
+    .close {
+        width: var(--closed);
+    }
+
+    .sidebar .header-text {
+        opacity: 1;
+    }
+
+    .close .header-text {
+        opacity: 0;
+    }
 }
