--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 :root {
@@ -27,6 +27,5 @@
 
 body {
   height: 100vh;
-  background: var(--body-color);
 }
 
